Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-5658

Assertion failure in QWidget::grabMouse

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.6.0
    • 4.6.0
    • None
    • None
    • 258e751b7f4c3ff5e44fdbd654ce45d0693934bf

      In qwidget_s60.cpp QWidget::grabMouse there's this assertion statement that causes some applications to crash in winscw debug emulator:

      Q_ASSERT(testAttribute(Qt::WA_WState_Created));

      Attached is a simple application to reproduce this situation in the winscw debug emulator.

      If the application calls grabMouse() before show() then it shouldn't crash in any build variant. Maybe it should just not do anything, but in any case it must not crash. That's not proper use of assertion statements.

        1. main.zip
          0.2 kB
          Jussi Suistomaa
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0101981 Janne Anttila
            suistoma Jussi Suistomaa
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes