Fix for  assertion failure in in QWidget::grabMouse for Symbian.

Docs say: "Note that only visible widgets can grab mouse input.
If isVisible() returns false for a widget, that widget cannot call
grabMouse()."

qwidget_x11.cpp uses the similar condition in grabMouse as symbian
after this commit.

Task-number: QTBUG-5658
Reviewed-by: Jason Barron